# jarvis

./: .gitignore  app.py  check_db.py  generate_inventory.py  main.py  pyproject.toml  run.sh  run_server.sh  status_server.sh  stop_server.sh
.streamlit/: config.toml
src/stockmind/: __init__.py  engine.py  feature_engine.py  forecast.py  ingest.py  inventory_synth.py  ui_data.py
templates/: about.html  base.html  customers.html  inventory.html  orders.html  products.html  promotion_engine.html
templates/partials/: analysis_results.html  customers_table.html  error.html  inventory_table.html  orders_table.html  products_table.html  success.html
