[project]
name = "jarvis"
version = "0.1.0"
description = "StockMind - Inventory Markdown Recommendation Engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.19.0",
    "duckdb>=1.1.3",
    "streamlit>=1.41.0",
    "numpy>=2.2.2",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "kaggle>=2.0.0",
]
