[project]
name = "jarvis"
version = "0.1.0"
description = "StockMind - Inventory Markdown Recommendation Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.19.0",
    "duckdb>=1.1.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "numpy>=2.2.2",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.1",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = ["kaggle>=2.0.0"]
